--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <link rel="preload" href="logo.svg" as="image">
 </head>
 <body>
+    <!-- Contract Address Banner -->
+    <div class="contract-banner">
+        <div class="contract-container">
+            <span class="contract-label">CONTRACT ADDRESS:</span>
+            <span class="contract-address" id="contractAddress">EMohHp1hpZemJHhefrp8NoeHc7T2rgH2XJaSvB7Wpump</span>
+            <button class="copy-btn" onclick="copyContract()" aria-label="Copy contract address">
+                <span class="copy-icon">📋</span>
+                <span class="copy-text">COPY</span>
+            </button>
+        </div>
+    </div>
+
     <!-- Navigation Section -->
     <nav class="navbar">
         <div class="nav-container">
